# Brain_Tumor_Detection

./: 16_WEEK_DEVELOPMENT_PLAN.txt  Brain_Tumor_Detection_Paper_Final.txt  PROJECT_DIARY.md  README.md  app.py  generate_visualizations.py  main.py  prediction_history.jsonl  pyproject.toml  requirements.txt
artifacts/: predict_response_sample.json  predict_smoke.txt  smoke_test_results.txt  training_report.json  web_result_smoke.txt
static/: styles.css
templates/: api_history.html  api_metrics.html  home.html  result.html
tests/: test_app.py
