[tool.poetry]
name = "repl_nix_BrainTumorDetectionwebsite1"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
Flask = "*"
opencv-python = "*"
pandas = "*"
scikit-learn = "*"
matplotlib = "*"
numpy = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
